[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main_Screen/window/window.gd" type="Script" id=1]
[ext_resource path="res://UI/fonts/Kenney Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Main_Screen/ui_set/bord.png" type="Texture" id=3]
[ext_resource path="res://Main_Screen/window/red_cross.png" type="Texture" id=4]
[ext_resource path="res://Main_Screen/window/red_button.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
outline_color = Color( 0.917647, 0.870588, 0.870588, 1 )
font_data = ExtResource( 2 )

[node name="window" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 440.112, -214.334 )
scale = Vector2( 0.5, 0.3 )
texture = ExtResource( 3 )
flip_h = true
flip_v = true

[node name="BlueButton" type="Sprite" parent="Sprite"]
position = Vector2( -1.53711, -569.595 )
scale = Vector2( 1.44955, 1.3 )
texture = ExtResource( 5 )

[node name="warning" type="Label" parent="Sprite"]
margin_left = -442.544
margin_top = -599.501
margin_right = 453.456
margin_bottom = -373.501
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 0.0352941, 0.0352941, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/line_spacing = 5
custom_constants/shadow_offset_y = 5
text = "warning !!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="warning_message" type="Label" parent="Sprite"]
margin_left = -442.0
margin_top = -309.0
margin_right = 436.0
margin_bottom = 555.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 7
text = "'joe is maybe 
the best programmer
 i ever met'"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchScreenButton" type="TouchScreenButton" parent="Sprite"]
position = Vector2( -128.367, 47.1937 )
scale = Vector2( 1.41177, 2.18129 )
normal = ExtResource( 4 )

[node name="ori_pos" type="Position2D" parent="."]
position = Vector2( 442, -214.96 )

[node name="final_pos" type="Position2D" parent="."]
position = Vector2( 442, 278.6 )

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="Sprite/TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
